--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-service": "^4.4.6",
     "@vue/compiler-sfc": "^3.0.11",
-    "node-sass": "^4.13.1",
+    "sass": "^1.54.9",
     "rollup": "^1.22.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
